<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormularioEncuestado">
    <TextView
        android:text="@string/formulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/txtnombre"
        android:hint="@string/nombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/txtapellidos"
        android:hint="@string/Apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btnAlimentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alimentos"/>
    <Button
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/procesar"/>
</LinearLayout>